base/longhorn/01-ingress.yaml
# TODO : This is a working example, but might not fit your environment
# Please override this file in your own overlays
# TODO : This is exposing longhorn's dashboard directly to the internet, 
# which is a bad idea.  Secure this, or keep it internal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
  - host: longhorn.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
  - hosts:
    - longhorn.example.com
    secretName: longhorn-cert
